--- a/src/utils/mixins.scss
+++ b/src/utils/mixins.scss
@@ -3,3 +3,13 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin drones_list {
+  width: 100%;
+  max-height: calc(100vh - 136px);
+  box-sizing: border-box;
+  overflow-y: auto;
+  padding-top: 16px;
+  display: flex;
+  flex-direction: column;
+}
