--- a/src/components/DroneInfo/DroneInfo.module.scss
+++ b/src/components/DroneInfo/DroneInfo.module.scss
@@ -8,7 +8,15 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  border-left: 4px solid transparent;
   border-bottom: 1px solid var(--border-light);
+  transition: 0.3s;
+
+  &:hover {
+    border-left: 4px solid var(--accent-primary, #2563EB);
+    background: var(--hover-lighblue);
+    transition: 0.3s;
+  }
 
   &_titleContainer {
     display: flex;
