--- a/src/components/AppMapBox/AppMapBox.scss
+++ b/src/components/AppMapBox/AppMapBox.scss
@@ -22,3 +22,28 @@
 .markerContainer {
   position: relative;
 }
+
+//.mapboxgl-popup {
+//  width: 320px;
+//}
+
+.mapboxgl-popup-content {
+  width: 320px;
+  background: transparent;
+  border-radius: 0;
+  box-shadow: none;
+  padding: 0;
+}
+
+.mapboxgl-popup-close-button {
+  right: 12px;
+  top: 12px;
+  width: 20px;
+  height: 20px;
+  font-size: 20px;
+  color: #9CA8B4;
+
+  &:hover {
+    background: transparent;
+  }
+}
